<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pnl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"

    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jhonmelvin.perello.Login" >

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <requestFocus />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/login"
            android:textColor="#80FFFFFF" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/register"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/lbl_forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/need_help"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>