<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pnl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jhonmelvin.perello.Register"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/register" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/txt_pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/txt_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/txt_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="@string/recovery_contact"
            android:inputType="phone"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#20FFFFFF"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/recovery_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#90FFFFFF"
            android:textSize="12sp"
            android:textStyle="italic"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/login_button"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/register"
                android:textColor="#80FFFFFF" />

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/login_button"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/cancel"
                android:textColor="#80FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>