<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pnl_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:scrollbars="none"
    android:background="@drawable/animation_list"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jhonmelvin.perello.Message" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hi_there" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="#20FFFFFF"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/nearly"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#90FFFFFF"
            android:textStyle="italic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#20FFFFFF"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#90FFFFFF"
            android:textSize="15sp"
            android:textStyle="italic"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/continue_string"
            android:textColor="#80FFFFFF" />
    </LinearLayout>

</ScrollView>